--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
     </ol>
 
     <footer>
-        <p>Created by Your Name | Java Project</p>
+        <p>Created by md kaunain raza | Java Project</p>
     </footer>
 </div>
 
 </body>
 </html>
+
